Addressing PR review comments

--- a/tempo_project/dataset/dimension_mappings.json5
+++ b/tempo_project/dataset/dimension_mappings.json5
@@ -11,5 +11,11 @@
       file: "dimension_mappings/metric_to_metric.csv",
       mapping_type: "one_to_one",
     },
+    {
+      description: "Select TEMPO model years starting in 2024",
+      dimension_type: "model_year",
+      file: "dimension_mappings/year_to_year.csv",
+      mapping_type: "one_to_one",
+    },
   ],
 }
