--- a/tempo_project/project.json5
+++ b/tempo_project/project.json5
@@ -349,6 +349,20 @@
           mapping_type: 'many_to_one_aggregation',
         },
       },
+      {
+        class: 'ModelYear',
+        description: 'Five year intervals from 2025 to 2050',
+        file: 'dimensions/supplemental/five_year_intervals.csv',
+        module: 'dsgrid.dimension.standard',
+        name: 'Five Year Intervals',
+        display_name: "Five Year Intervals",
+        type: 'model_year',
+        mapping: {
+          description: 'Maps two year interval data 2024-2050 to five year interval data 2025-2050',
+          file: 'dimension_mappings/base_to_supplemental/interpolate_to_five_year_intervals.csv',
+          mapping_type: 'many_to_one_aggregation',
+        },
+      },
     ],
   },
 }
