Remove supplemental_columns

--- a/dsgrid_project/derived_datasets/tempo_conus_2022_mapped.json5
+++ b/dsgrid_project/derived_datasets/tempo_conus_2022_mapped.json5
@@ -17,10 +17,8 @@
     "include_dsgrid_dataset_components": false,
   },
   "result": {
-    "supplemental_columns": [],
     "replace_ids_with_names": false,
-    "aggregations": [
-    ],
+    "aggregations": [],
     "reports": [],
     "column_type": "dimension_types",
     "output_format": "parquet",
