--- a/dsgrid_project/datasets/modeled/aeo2021_reference/commercial/End_Use_Growth_Factors/dataset.json5
+++ b/dsgrid_project/datasets/modeled/aeo2021_reference/commercial/End_Use_Growth_Factors/dataset.json5
@@ -43,26 +43,23 @@
       description: "US Census Divisions",
       file: "../../../../../dimensions/supplemental/census_divisions.csv",
       module: "dsgrid.dimension.standard",
-      name: "US Census Divisions",
       type: "geography",
-      display_name: "Census Division",
+      name: "Census Division",
     },
     {
       "class": "Sector",
       description: "Commercial sector only",
       file: "../../../../modeled/comstock/dimensions/sector_commercial.csv",
       module: "dsgrid.dimension.standard",
-      name: "commercial-sector",
       type: "sector",
-      display_name: "Commercial",
+      name: "Commercial",
     },
     {
       "class": "Subsector",
       description: "AEO 2021 commercial building types (N=11)",
       file: "dimensions/aeo2021_commercial_building_types.csv",
       module: "dsgrid.dimension.standard",
-      name: "AEO2021-commercial-building-types",
-      display_name: "Commercial Subsector",
+      name: "Commercial Subsector",
       type: "subsector",
     },
     {
@@ -71,25 +68,22 @@
       file: "dimensions/aeo2021_commercial_energy_enduses.csv",
       module: "dsgrid.dimension.standard",
       name: "AEO2021-commercial-energy-enduses-unitless",
-      type: "metric",
-      display_name: "AEO Commercial End Uses",
+      name: "AEO Commercial End Uses",
     },
     {
       "class": "Scenario",
       description: "EIA AEO Reference Scenario",
       file: "dimensions/aeo_reference_scenario.csv",
       module: "dsgrid.dimension.standard",
-      name: "AEO-Reference-Scenario",
       type: "scenario",
-      display_name: "AEO Reference Scenario",
+      name: "AEO Reference Scenario",
     },
     {
       "class": "WeatherYear",
       description: "Weather year, 2012 only",
       file: "../../../../../dimensions/weather_years.csv",
       module: "dsgrid.dimension.standard",
-      name: "2012 Weather Year",
-      display_name: "Weather 2012",
+      name: "Weather 2012",
       type: "weather_year",
     },
     {
@@ -97,18 +91,16 @@
       description: "Model years, 2013-2050, trivial, single record",
       file: "dimensions/model_years_trivial_2013_to_2050.csv",
       module: "dsgrid.dimension.standard",
-      name: "Model_Years-trivial-2013_to_2050",
       type: "model_year",
-      display_name: "AEO Model Years",
+      name: "AEO Model Years",
     },
     {
       "class": "NoOpTime",
       description: "No Operation Time",
       time_type: "noop",
       module: "dsgrid.dimension.standard",
-      name: "noop_time",
       type: "time",
-      display_name: "No Op Time",
+      name: "No Op Time",
     },
   ],
 }
