--- a/dsgrid_project/datasets/modeled/aeo2021_reference/industrial/Growth_Factors/dataset.json5
+++ b/dsgrid_project/datasets/modeled/aeo2021_reference/industrial/Growth_Factors/dataset.json5
@@ -45,23 +45,20 @@
             description: "Contiguous United States",
             file: "../../../../../dimensions/supplemental/conus.csv",
             module: "dsgrid.dimension.standard",
-            name: "contiguous-United-States",
             type: "geography",
-            display_name: "CONUS",
+            name: "CONUS",
         },
         {
             "class": "Sector",
             description: "Industrial sector only",
             file: "dimensions/sector_industrial.csv",
             module: "dsgrid.dimension.standard",
-            name: "industrial-sector",
             type: "sector",
-            display_name: "Industrial",
+            name: "Industrial",
         },
         {
             type: 'subsector',
-            name: 'unspecified-subsectors',
-            display_name: 'Subsector Unspecified',
+            name: 'Subsector Unspecified',
             file: '../../../../historical/dsgrid_efs_2012_losses/dimensions/subsectors.csv',
             module: 'dsgrid.dimension.standard',
             class: 'Subsector',
@@ -72,26 +69,23 @@
             description: "Purchased electricity",
             file: "dimensions/metric.csv",
             module: "dsgrid.dimension.standard",
-            name: "AEO2021-industrial-purchased-electricity-unitless",
             type: "metric",
-            display_name: "AEO Industrial Purchased Electricity",
+            name: "AEO Industrial Purchased Electricity",
         },
         {
             "class": "Scenario",
             description: "EIA AEO Reference Scenario",
             file: "../../commercial/End_Use_Growth_Factors/dimensions/aeo_reference_scenario.csv",
             module: "dsgrid.dimension.standard",
-            name: "AEO-Reference-Scenario",
             type: "scenario",
-            display_name: "AEO Reference Scenario",
+            name: "AEO Reference Scenario",
         },
         {
             "class": "WeatherYear",
             description: "Weather year, 2012 only",
             file: "../../../../../dimensions/weather_years.csv",
             module: "dsgrid.dimension.standard",
-            name: "2012 Weather Year",
-            display_name: "Weather 2012",
+            name: "Weather 2012",
             type: "weather_year",
         },
         {
@@ -99,18 +93,16 @@
             description: "Model years, 2013-2050, trivial, single record",
             file: "../../commercial/End_Use_Growth_Factors/dimensions/model_years_trivial_2013_to_2050.csv",
             module: "dsgrid.dimension.standard",
-            name: "Model_Years-trivial-2013_to_2050",
             type: "model_year",
-            display_name: "AEO Model Years",
+            name: "AEO Model Years",
         },
         {
             "class": "NoOpTime",
             description: "No Operation Time",
             time_type: "noop",
             module: "dsgrid.dimension.standard",
-            name: "noop_time",
             type: "time",
-            display_name: "No Op Time",
+            name: "No Op Time",
         },
     ]
 }
