--- a/dsgrid_project/datasets/modeled/aeo2021_reference/residential/End_Use_Growth_Factors/dataset.json5
+++ b/dsgrid_project/datasets/modeled/aeo2021_reference/residential/End_Use_Growth_Factors/dataset.json5
@@ -45,8 +45,7 @@
       description: "Residential sector only",
       file: "../../../resstock/dimensions/sector_residential.csv",
       module: "dsgrid.dimension.standard",
-      name: "residential-sector",
-      display_name: "Residential Sector",
+      name: "Residential Sector",
       type: "sector",
     },
     {
@@ -54,8 +53,7 @@
       description: "Residential subsector only",
       file: "dimensions/residential_subsectors.csv",
       module: "dsgrid.dimension.standard",
-      name: "residential-subsector",
-      display_name: "Residential Subsector",
+      name: "Residential Subsector",
       type: "subsector",
     },
     {
@@ -63,26 +61,23 @@
       description: "AEO 2021 residential energy end uses, condensed to map to ResStock (N=18 from 6 end uses, 5 fuel types)",
       file: "dimensions/aeo2021_residential_condensed_energy_enduses.csv",
       module: "dsgrid.dimension.standard",
-      name: "AEO2021-residential-energy-enduses-unitless_for-growth-rates",
       type: "metric",
-      display_name: "AEO Residential End Uses",
+      name: "AEO Residential End Uses",
     },
     {
       "class": "Scenario",
       description: "EIA AEO Reference Scenario",
       file: "../../commercial/End_Use_Growth_Factors/dimensions/aeo_reference_scenario.csv",
       module: "dsgrid.dimension.standard",
-      name: "AEO-Reference-Scenario",
       type: "scenario",
-      display_name: "AEO Reference Scenario",
+      name: "AEO Reference Scenario",
     },
     {
       "class": "WeatherYear",
       description: "Weather year, 2012 only",
       file: "../../../../../dimensions/weather_years.csv",
       module: "dsgrid.dimension.standard",
-      name: "2012 Weather Year",
-      display_name: "Weather 2012",
+      name: "Weather 2012",
       type: "weather_year",
     },
     {
@@ -90,18 +85,16 @@
       description: "Model years, 2013-2050, trivial, single record",
       file: "../../commercial/End_Use_Growth_Factors/dimensions/model_years_trivial_2013_to_2050.csv",
       module: "dsgrid.dimension.standard",
-      name: "Model_Years-trivial-2013_to_2050",
       type: "model_year",
-      display_name: "AEO Model Years",
+      name: "AEO Model Years",
     },
     {
       "class": "NoOpTime",
       description: "No Operation Time",
       time_type: "noop",
       module: "dsgrid.dimension.standard",
-      name: "noop_time",
       type: "time",
-      display_name: "No Op Time",
+      name: "No Op Time",
     },
   ],
   dimension_references: [
