--- a/tempo_project/dataset/dataset.json5
+++ b/tempo_project/dataset/dataset.json5
@@ -41,32 +41,28 @@
     {
       "class": "County",
       type: "geography",
-      name: "ACS County 2018",
-      display_name: "County",
+      name: "County",
       file: "dimensions/counties.csv",
       description: "American Community Survey US counties, 2018.",
     },
     {
       "class": "Subsector",
       type: "subsector",
-      name: "TEMPO Bin",
-      display_name: "Household and Vehicle Type",
+      name: "Household and Vehicle Type",
       file: "dimensions/bin.csv",
       description: "TEMPO demographic/geographic/vehicle bins. This is a cross-join of the following supplemental dimensions: * Composition (Single Driver, Some Drivers Smaller, Some Drivers Larger) * Income (Low Income, Middle Income, High Income) * Urbanity (Rural, Small Town, Suburban, Second City, Urban) * Vehicle Size Class (Compact, Midsize, SUV, Pickup) * Tech (PHEV25/PHEV50/BEV100/BEV300) ",
     },
     {
       "class": "EnergyEndUse",
       type: "metric",
-      name: "TEMPO LDV PEV Usage",
-      display_name: "Electric Vehicle Charging",
+      name: "Electric Vehicle Charging",
       file: "dimensions/end_use.csv",
       description: "Type of charging (L1 and L2, DCFC) used by TEMPO PEVs.",
     },
     {
       "class": "Time",
       type: "time",
-      name: "Time of Week by Month",
-      display_name: "Hourly for Representative Weeks",
+      name: "Hourly for Representative Weeks",
       ranges: [
         {
           start: 1,
@@ -82,24 +78,21 @@
     {
       "class": "ModelYear",
       type: "model_year",
-      name: "TEMPO Model Year",
-      display_name: "TEMPO Model Years",
+      name: "TEMPO Model Years",
       file: "dimensions/year.csv",
       description: "TEMPO modeling years (every other year) for CONUS 2022 project, 2024-2050",
     },
     {
       "class": "Sector",
       type: "sector",
-      name: "Transportation Sector",
-      display_name: "Transportation",
+      name: "Transportation",
       file: "dimensions/sector.csv",
       description: "Transportation Sector",
     },
     {
       "class": "Scenario",
       type: "scenario",
-      name: "Technology and Policy Scenario",
-      display_name: "Scenario",
+      name: "Scenario",
       file: "dimensions/scenario.csv",
       description: "EV Scenarios: AEO Reference, EFS High Electrification, LDV Sales All-EV by 2035",
     },
@@ -108,8 +101,7 @@
       description: "Weather year, 2012 only",
       file: "../dimensions/weather_years.csv",
       module: "dsgrid.dimension.standard",
-      name: "2012 Weather Year",
-      display_name: "Weather 2012",
+      name: "Weather 2012",
       type: "weather_year",
     },
   ],
