--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_distributed_generation/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_distributed_generation/dataset.json5
@@ -37,8 +37,7 @@
   dimensions: [
     {
       type: "geography",
-      name: "states",
-      display_name: "States",
+      name: "States",
       file: "dimensions/geography.csv",
       module: "dsgrid.dimension.standard",
       "class": "State",
@@ -46,8 +45,7 @@
     },
     {
       type: "sector",
-      name: "com-ind-res-sectors",
-      display_name: "Commercial Industrial and Residential Sectors",
+      name: "Commercial Industrial and Residential Sectors",
       file: "dimensions/sector.csv",
       module: "dsgrid.dimension.standard",
       "class": "Sector",
@@ -55,8 +53,7 @@
     },
     {
       type: "subsector",
-      name: "unspecified-subsectors",
-      display_name: "Unspecified Subsectors",
+      name: "Unspecified Subsectors",
       file: "dimensions/subsectors.csv",
       module: "dsgrid.dimension.standard",
       "class": "Subsector",
@@ -64,8 +61,7 @@
     },
     {
       type: "metric",
-      name: "chp_dg",
-      display_name: "CHP and Thermal DG",
+      name: "CHP and Thermal DG",
       file: "dimensions/metric.csv",
       module: "dsgrid.dimension.standard",
       "class": "EnergyEndUse",
@@ -73,8 +69,7 @@
     },
     {
       type: "scenario",
-      name: "Conus-2022-reference",
-      display_name: "Reference",
+      name: "Reference",
       file: "../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv",
       module: "dsgrid.dimension.standard",
       "class": "Scenario",
@@ -82,8 +77,7 @@
     },
     {
       type: "model_year",
-      name: "Model-Year-2012",
-      display_name: "2012",
+      name: "2012",
       file: "dimensions/model_year.csv",
       module: "dsgrid.dimension.standard",
       "class": "ModelYear",
@@ -94,14 +88,12 @@
       description: "Weather year, 2012 only",
       file: "../../../dimensions/weather_years.csv",
       module: "dsgrid.dimension.standard",
-      name: "2012 Weather Year",
-      display_name: "2012 Weather",
+      name: "2012 Weather",
       type: "weather_year",
     },
     {
       // Note: this does not match the project time because of it being period-ending, not period-beginning
-      name: "Time-2012-EST-hourly-periodEnding-noDST-noLeapDayAdjustment-total-UTChour1start",
-      display_name: "2012 Hourly EST",
+      name: "2012 Hourly EST",
       type: "time",
       module: "dsgrid.dimension.standard",
       "class": "Time",
