--- a/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dataset.json5
+++ b/dsgrid_project/datasets/historical/dsgrid_efs_2012_losses/dataset.json5
@@ -35,8 +35,7 @@
   dimensions: [
     {
       type: 'geography',
-      name: 'states',
-      display_name: 'States',
+      name: 'States',
       file: '../../../dimensions/supplemental/states.csv',
       module: 'dsgrid.dimension.standard',
       class: 'State',
@@ -44,8 +43,7 @@
     },
     {
       type: 'sector',
-      name: 'all-sectors',
-      display_name: 'All Sectors',
+      name: 'All Sectors',
       file: 'dimensions/sector.csv',
       module: 'dsgrid.dimension.standard',
       class: 'Sector',
@@ -53,8 +51,7 @@
     },
     {
       type: 'subsector',
-      name: 'unspecified-subsectors',
-      display_name: 'Subsector Unspecified',
+      name: 'Subsector Unspecified',
       file: 'dimensions/subsectors.csv',
       module: 'dsgrid.dimension.standard',
       class: 'Subsector',
@@ -63,7 +60,6 @@
     {
       type: 'metric',
       name: 'Unspecified Electricity',
-      display_name: 'Unspecified Electricity',
       file: 'dimensions/metric.csv',
       module: 'dsgrid.dimension.standard',
       class: 'EnergyEndUse',
@@ -71,8 +67,7 @@
     },
     {
       type: 'scenario',
-      name: 'Conus-2022-reference',
-      display_name: 'Reference',
+      name: 'Reference',
       file: '../../modeled/resstock/dimensions/scenario_conus_2022_reference.csv',
       module: 'dsgrid.dimension.standard',
       class: 'Scenario',
@@ -80,8 +75,7 @@
     },
     {
       type: 'model_year',
-      name: 'Model-Year-2012',
-      display_name: '2012',
+      name: '2012',
       file: 'dimensions/model_year.csv',
       module: 'dsgrid.dimension.standard',
       class: 'ModelYear',
@@ -92,14 +86,12 @@
       description: 'Weather year, 2012 only',
       file: '../../../dimensions/weather_years.csv',
       module: 'dsgrid.dimension.standard',
-      name: '2012 Weather Year',
-      display_name: '2012 Weather',
+      name: '2012 Weather',
       type: 'weather_year',
     },
     {
       // Note: this does not match the project time because of it being period-ending, not period-beginning
-      name: 'Time-2012-EST-hourly-periodEnding-noDST-noLeapDayAdjustment-total-UTChour1start',
-      display_name: '2012 Hourly EST',
+      name: '2012 Hourly EST',
       type: 'time',
       module: 'dsgrid.dimension.standard',
       class: 'Time',
