--- a/dsgrid_project/project.json5
+++ b/dsgrid_project/project.json5
@@ -384,8 +384,7 @@
         description: 'US counties for L48, Census 2020 vintage, no territories',
         file: 'dimensions/counties.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'US Counties 2020 L48',
-        display_name: 'County',
+        name: 'County',
         type: 'geography',
       },
       {
@@ -393,8 +392,7 @@
         description: 'dsgrid Standard Scenarios 2021 Sectors; Commercial, Residential, Industrial and Transportation',
         file: 'dimensions/sectors.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'Sectors - Com-Res-Ind-Trans',
-        display_name: 'Sector',
+        name: 'Sector',
         type: 'sector',
       },
       {
@@ -402,8 +400,7 @@
         description: 'dsgrid CONUS 2022 Subsectors',
         file: 'dimensions/subsectors.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'CONUS-2022-Detailed-Subsectors',
-        display_name: 'Subsector',
+        name: 'Subsector',
         type: 'subsector',
       },
       {
@@ -411,8 +408,7 @@
         description: "dsgrid CONUS 2022 End Uses (all fuel types)",
         file: "dimensions/enduses.csv",
         module: "dsgrid.dimension.standard",
-        name: "CONUS-2022-Detailed-End-Uses",
-        display_name: "End Use",
+        name: "End Use",
         type: "metric",
       },
       {
@@ -420,8 +416,7 @@
         description: 'Model year, 2010-2050',
         file: 'dimensions/model_years.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'Model Years 2010 to 2050',
-        display_name: 'Model Year',
+        name: 'Model Year',
         type: 'model_year',
       },
       {
@@ -429,15 +424,13 @@
         description: 'Scenarios for the dsgrid CONUS 2022 project, which include a Reference scenario and two light-duty vehicle electrification scenarios',
         file: 'dimensions/scenarios.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'CONUS-2022-scenarios',
-        display_name: 'Scenario',
+        name: 'Scenario',
         type: 'scenario',
       },
       {
         class: 'Time',
         frequency: 'P0DT1H0M0.000000S',
-        name: 'Time-2012-EST-hourly-periodBeginning-noLeapDayAdjustment-total',
-        display_name: 'Time EST',
+        name: 'Time EST',
         time_type: 'datetime',
         leap_day_adjustment: 'none',
         description: 'Time dimension, 2012 hourly EST, hour-beginning, no Leap Day Adjustment, total value',
@@ -459,14 +452,13 @@
         file: 'dimensions/weather_years.csv',
         module: 'dsgrid.dimension.standard',
         name: '2012 Weather Year',
-        display_name: 'Weather 2012',
+        name: 'Weather 2012',
         type: 'weather_year',
       },
     ],
     subset_dimensions: [
       {
-        name: 'End Uses by Fuel Type',
-        display_name: 'end_uses_by_fuel_type',
+        name: 'End Uses By Fuel Type',
         description: 'Provides selection of end uses by fuel type.',
         type: 'metric',
         filename: 'dimensions/subset/end_uses_by_fuel_type.csv',
@@ -500,7 +492,6 @@
       },
       {
         name: 'End Uses by Sector',
-        display_name: 'end_uses_by_sector',
         description: 'Provides selection of end uses by sector.',
         type: 'metric',
         filename: 'dimensions/subset/end_uses_by_sector.csv',
@@ -530,7 +521,6 @@
       },
       {
         name: 'Subsectors by Sector',
-        display_name: 'subsectors_by_sector',
         description: 'Provides selection of subsectors by sector.',
         type: 'subsector',
         filename: 'dimensions/subset/subsectors_by_sector.csv',
@@ -551,7 +541,6 @@
       },
       {
         name: 'Subset Sectors',
-        display_name: 'subset_sectors',
         description: 'Provides sector dimensions for derived datasets.',
         type: 'sector',
         filename: 'dimensions/subset/sectors.csv',
@@ -582,8 +571,7 @@
         description: 'US States L48',
         file: 'dimensions/supplemental/states.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'US States L48',
-        display_name: 'State',
+        name: 'State',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to State',
@@ -596,8 +584,7 @@
         description: 'US Census Regions',
         file: 'dimensions/supplemental/census_regions.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'US Census Regions',
-        display_name: 'Census Region',
+        name: 'Census Region',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to CensusRegion',
@@ -610,8 +597,7 @@
         description: 'US Census Divisions',
         file: 'dimensions/supplemental/census_divisions.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'US Census Divisions',
-        display_name: 'Census Division',
+        name: 'Census Division',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to CensusDivision',
@@ -625,7 +611,6 @@
         file: 'dimensions/supplemental/reeds_pca.csv',
         module: 'dsgrid.dimension.standard',
         name: 'ReEDS PCA',
-        display_name: 'ReEDS PCA',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to ReEDS Power Control Areas',
@@ -638,8 +623,7 @@
         description: 'Contiguous United States',
         file: 'dimensions/supplemental/conus.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'Contiguous United States',
-        display_name: 'CONUS',
+        name: 'CONUS',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to CONUS',
