--- a/tempo_project/project.json5
+++ b/tempo_project/project.json5
@@ -25,23 +25,20 @@
         description: 'US counties for L48, Census 2020 vintage, no territories',
         file: 'dimensions/counties.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'US Counties 2020 L48',
-        display_name: 'County',
+        name: 'County',
         type: 'geography',
       },
       {
         class: 'Sector',
         type: 'sector',
-        name: 'Transportation Sector',
-        display_name: 'Transportation',
+        name: 'Transportation',
         file: 'dataset/dimensions/sector.csv',
         description: 'Transportation Sector',
       },
       {
         class: 'Subsector',
         type: 'subsector',
-        name: "TEMPO Bin",
-        display_name: "Household and Vehicle Type",
+        name: "Household and Vehicle Type",
         file: "dataset/dimensions/bin.csv",
         description: "TEMPO demographic/geographic/vehicle bins. This is a cross-join of the following supplemental dimensions: * Composition (Single Driver, Some Drivers Smaller, Some Drivers Larger) * Income (Low Income, Middle Income, High Income) * Urbanity (Rural, Small Town, Suburban, Second City, Urban) * Vehicle Size Class (Compact, Midsize, SUV, Pickup) * Tech (PHEV25/PHEV50/BEV100/BEV300) ",
       },
@@ -50,31 +47,27 @@
         description: 'dsgrid CONUS 2022 End Uses (all fuel types)',
         file: 'dimensions/enduses.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'CONUS-2022-Detailed-End-Uses',
-        display_name: 'End Use',
+        name: 'End Use',
         type: 'metric',
       },
       {
         class: "ModelYear",
         type: "model_year",
-        name: "TEMPO Project Model Year",
-        display_name: "TEMPO Project Model Years",
+        name: "TEMPO Project Model Years",
         file: "dimensions/years.csv",
         description: "TEMPO modeling years for CONUS 2022 project, 2024-2050",
       },
       {
         class: "Scenario",
         type: "scenario",
-        name: "Technology and Policy Scenario",
-        display_name: "Scenario",
+        name: "Scenario",
         file: "dataset/dimensions/scenario.csv",
         description: "EV Scenarios: AEO Reference, EFS High Electrification, LDV Sales All-EV by 2035",
       },
       {
         class: 'Time',
         frequency: 'P0DT1H0M0.000000S',
-        name: 'Time-2012-EST-hourly-periodBeginning-noLeapDayAdjustment-total',
-        display_name: 'Time EST',
+        name: 'Time EST',
         time_type: 'datetime',
         leap_day_adjustment: 'none',
         description: 'Time dimension, 2012 hourly EST, hour-beginning, no Leap Day Adjustment, total value',
@@ -95,15 +88,13 @@
         description: 'Weather year, 2012 only',
         file: 'dimensions/weather_years.csv',
         module: 'dsgrid.dimension.standard',
-        name: '2012 Weather Year',
-        display_name: 'Weather 2012',
+        name: 'Weather 2012',
         type: 'weather_year',
       },
     ],
     subset_dimensions: [
       {
         name: 'End Uses by Fuel Type',
-        display_name: 'End Uses by Fuel Type',
         description: 'Provides selection of end uses by fuel type.',
         type: 'metric',
         filename: 'dimensions/subset/enduses_by_fuel_type.csv',
@@ -116,8 +107,7 @@
         ]
       },
       {
-        name: 'dsgrid CONUS 2022 Subsectors',
-        display_name: 'Subsector',
+        name: 'Subsector',
         description: 'dsgrid CONUS 2022 Subsectors',
         type: 'subsector',
         filename: 'dimensions/subset/dsgrid_subsectors.csv',
@@ -158,7 +148,6 @@
       },
       {
         name: "Vehicle Class",
-        display_name: "Vehicle Class",
         description: "Light-duty passenger vehicle classes",
         type: "subsector",
         filename: "dimensions/subset/vehicle_class.csv",
@@ -183,7 +172,6 @@
       },
       {
         name: "Household Size",
-        display_name: "Household Size",
         description: "Household size with a focus on number of drivers",
         type: "subsector",
         filename: "dimensions/subset/household_size.csv",
@@ -204,7 +192,6 @@
       },
       {
         name: "Household Income",
-        display_name: "Household Income",
         description: "Household income bins",
         type: "subsector",
         filename: "dimensions/subset/household_income.csv",
@@ -225,7 +212,6 @@
       },
       {
         name: "Vehicle Technology",
-        display_name: "Vehicle Technology",
         description: "Electric vehicle technology by type (i.e., battery electric or plug-in hybrid) and range",
         type: "subsector",
         filename: "dimensions/subset/vehicle_technology.csv",
@@ -250,7 +236,6 @@
       },
       {
         name: "Urbanity",
-        display_name: "Urbanity",
         description: "Binned description of household locations focusing on population density",
         type: "subsector",
         filename: "dimensions/subset/urbanity.csv",
@@ -284,8 +269,7 @@
         description: 'US States L48',
         file: 'dimensions/supplemental/states.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'US States L48',
-        display_name: 'State',
+        name: 'State',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to State',
@@ -298,8 +282,7 @@
         description: 'US Census Regions',
         file: 'dimensions/supplemental/census_regions.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'US Census Regions',
-        display_name: 'Census Region',
+        name: 'Census Region',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to CensusRegion',
@@ -312,8 +295,7 @@
         description: 'US Census Divisions',
         file: 'dimensions/supplemental/census_divisions.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'US Census Divisions',
-        display_name: 'Census Division',
+        name: 'Census Division',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to CensusDivision',
@@ -327,7 +309,6 @@
         file: 'dimensions/supplemental/reeds_pca.csv',
         module: 'dsgrid.dimension.standard',
         name: 'ReEDS PCA',
-        display_name: 'ReEDS PCA',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to ReEDS Power Control Areas',
@@ -340,8 +321,7 @@
         description: 'Contiguous United States',
         file: 'dimensions/supplemental/conus.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'Contiguous United States',
-        display_name: 'CONUS',
+        name: 'CONUS',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to CONUS',
@@ -354,8 +334,7 @@
         description: 'Five year intervals from 2025 to 2050',
         file: 'dimensions/supplemental/five_year_intervals.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'Five Year Intervals',
-        display_name: "Five Year Intervals",
+        name: "Five Year Intervals",
         type: 'model_year',
         mapping: {
           description: 'Maps two year interval data 2024-2050 to five year interval data 2025-2050',
