Use snake_case for dimension names

--- a/tempo_project/project.json5
+++ b/tempo_project/project.json5
@@ -25,20 +25,20 @@
         description: 'US counties for L48, Census 2020 vintage, no territories',
         file: 'dimensions/counties.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'County',
+        name: 'county',
         type: 'geography',
       },
       {
         class: 'Sector',
         type: 'sector',
-        name: 'Transportation',
+        name: 'transportation',
         file: 'dataset/dimensions/sector.csv',
         description: 'Transportation Sector',
       },
       {
         class: 'Subsector',
         type: 'subsector',
-        name: "Household and Vehicle Type",
+        name: "household_and_vehicle_type",
         file: "dataset/dimensions/bin.csv",
         description: "TEMPO demographic/geographic/vehicle bins. This is a cross-join of the following supplemental dimensions: * Composition (Single Driver, Some Drivers Smaller, Some Drivers Larger) * Income (Low Income, Middle Income, High Income) * Urbanity (Rural, Small Town, Suburban, Second City, Urban) * Vehicle Size Class (Compact, Midsize, SUV, Pickup) * Tech (PHEV25/PHEV50/BEV100/BEV300) ",
       },
@@ -47,27 +47,27 @@
         description: 'dsgrid CONUS 2022 End Uses (all fuel types)',
         file: 'dimensions/enduses.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'End Use',
+        name: 'end_use',
         type: 'metric',
       },
       {
         class: "ModelYear",
         type: "model_year",
-        name: "TEMPO Project Model Years",
+        name: "tempo_project_model_years",
         file: "dimensions/years.csv",
         description: "TEMPO modeling years for CONUS 2022 project, 2024-2050",
       },
       {
         class: "Scenario",
         type: "scenario",
-        name: "Scenario",
+        name: "scenario",
         file: "dataset/dimensions/scenario.csv",
         description: "EV Scenarios: AEO Reference, EFS High Electrification, LDV Sales All-EV by 2035",
       },
       {
         class: 'Time',
         frequency: 'P0DT1H0M0.000000S',
-        name: 'Time EST',
+        name: 'time_est',
         time_type: 'datetime',
         leap_day_adjustment: 'none',
         description: 'Time dimension, 2012 hourly EST, hour-beginning, no Leap Day Adjustment, total value',
@@ -88,13 +88,13 @@
         description: 'Weather year, 2012 only',
         file: 'dimensions/weather_years.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'Weather 2012',
+        name: 'weather_2012',
         type: 'weather_year',
       },
     ],
     subset_dimensions: [
       {
-        name: 'End Uses by Fuel Type',
+        name: 'end_uses_by_fuel_type',
         description: 'Provides selection of end uses by fuel type.',
         type: 'metric',
         filename: 'dimensions/subset/enduses_by_fuel_type.csv',
@@ -265,7 +265,7 @@
     ],
     supplemental_dimensions: [
       {
-        class: 'State',
+        class: 'state',
         description: 'US States L48',
         file: 'dimensions/supplemental/states.csv',
         module: 'dsgrid.dimension.standard',
@@ -282,7 +282,7 @@
         description: 'US Census Regions',
         file: 'dimensions/supplemental/census_regions.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'Census Region',
+        name: 'census_region',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to CensusRegion',
@@ -295,7 +295,7 @@
         description: 'US Census Divisions',
         file: 'dimensions/supplemental/census_divisions.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'Census Division',
+        name: 'census_division',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to CensusDivision',
@@ -308,7 +308,7 @@
         description: 'ReEDS Power Control Areas',
         file: 'dimensions/supplemental/reeds_pca.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'ReEDS PCA',
+        name: 'reeds_pca',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to ReEDS Power Control Areas',
@@ -321,7 +321,7 @@
         description: 'Contiguous United States',
         file: 'dimensions/supplemental/conus.csv',
         module: 'dsgrid.dimension.standard',
-        name: 'CONUS',
+        name: 'conus',
         type: 'geography',
         mapping: {
           description: 'Maps US Counties 2020 L48 to CONUS',
@@ -334,7 +334,7 @@
         description: 'Five year intervals from 2025 to 2050',
         file: 'dimensions/supplemental/five_year_intervals.csv',
         module: 'dsgrid.dimension.standard',
-        name: "Five Year Intervals",
+        name: "five_year_intervals",
         type: 'model_year',
         mapping: {
           description: 'Maps two year interval data 2024-2050 to five year interval data 2025-2050',
